# odb-sys

./: .gitignore  CMakeLists.txt  Cargo.toml  NOTICE  README.md  build.rs  openroad-pin.yaml
.github/workflows/: build-libodb.yml  generated-freshness.yml
docs/: derived-core-schema.json  derived-core-schema.md
scripts/: check-generated.sh  derive-schema.py  fetch-odb-src.sh  generate-bindings.py
src/: generated.cc  generated.h  generated_bridge.rs  generated_resolvers.h  generated_write.cc  generated_write.h  generated_write_bridge.rs  lib.rs  shim.cc  shim.h
test/: make-hier-fixture.cpp  probe.cpp
tests/: roundtrip.rs  writepath.rs
